# c2pa-python

./: .gitignore  CONTRIBUTING.md  Cargo.toml  MANIFEST.in  MEMORY_FINDINGS.md  Makefile  README.md  README_saved.md  build.rs  c2pa-native-version.txt  conf.py  deny.toml  ffi_improvs.md  go.mod  go.sum  improvs-1.md  index.rst  meson.build  meson.options  pr294-finishing-plan.md  pr297-review.md  pyproject.toml  requirements-dev.txt  requirements.txt  review.md  review_2.md  setup.cfg  setup.py  state_handling.md  test.txt
.benchmarks/: changes-memory-1.json  changes-memory-2.json  changes-memory-3.json  changes-memory-4.json  changes-memory-5.json  changes-stress-1.json  changes-stress-2.json  changes-stress-3.json  changes-stress-4.json  changes-stress-5.json  main-memory-1.json  main-memory-2.json  main-memory-3.json  main-memory-4.json  main-memory-5.json  main-stress-1.json  main-stress-2.json  main-stress-3.json  main-stress-4.json  main-stress-5.json  memory-baseline.json  memory-postopt.json  memory-postopt2.json  memory-postopt3.json  stress-baseline.json  stress-postopt.json
.github/: memory-benchmark.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-wheel.yml  build.yml  changelog.yml  ci-build.yml  ci.yml  cpu-benchmark.yml  memory-benchmark.yml  publish-docs.yml  publish.yml  upload-test-file.yml  upload-test.yml
.venv-test/: pyvenv.cfg
api-docs/: conf.py  index.rst
c2pa/: __init__.py
c2pa/c2pa/: __init__.py  c2pa.py
c2pa/c2pa_api/: __init__.py  c2pa_api.py
docs/: class-diagram.md  context-settings.md  context.md  faqs.md  intents.md  intents.md.md  native-resources-management.md  project-contributions.md  release-notes.md  selective-manifests.md  settings.md  tbd_intents.md.md  tbd_selective-manifests.md  usage.md  working-stores.md
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  project-contributions.html  py-modindex.html  release-notes.html  search.html  searchindex.js  usage.html
docs/api/: index.rst
docs/api/c2pa/: index.rst
docs/tmn-wip-docs/: context.md  intents.md.md  selective-manifests.md  settings.md  usage.md  working-stores.md
examples/: README.md  no_thumbnails.py  read.py  sign.py  sign_info.py  sign_using_signer_info.py  test.py  training.py
pkg/c2pa/: algorithms.go  c2pa.go  c2pa_test.go  callbacksigner.go  io.go  staticsigner.go
pkg/c2pa/demo/: demo.go
scripts/: aggregate_benchmark_results.py  build_local_artifacts.py  download_artifacts.py  generate_api_docs.py  run_benchmark_comparison.sh  run_benchmark_leak_comparison.sh
src/: c2pa.udl  c2pa.uniffi.rs  callback_signer.rs  error.rs  json_api.rs  lib.rs  signer_info.rs  streams.rs  test_stream.rs
src/c2pa/: __init__.py  build.py  c2pa.go  c2pa.py  lib.py
tests/: BENCHMARKS.md  BENCHMARK_RESULTS.md  _bench_utils.py  _test_api.py  _test_c2pa.py  benchmark.py  benchmark_memory.py  benchmark_stress.py  c2pa_api.py  conftest.py  example.py  test_api.py  test_builder_with_context.py  test_builder_with_signer.py  test_c2pa.py  test_common.py  test_context.py  test_context_base.py  test_context_builder.py  test_context_integration.py  test_context_with_signer.py  test_docs.py  test_legacy_api.py  test_reader.py  test_reader_with_context.py  test_resource_growth.py  test_settings.py  test_stream.py  test_threaded.py  test_unit_tests.py  test_unit_tests_threaded.py  test_unit_threaded.py  test_v2.py  threaded_test.py  training.py  training_v2.py  trust_config_test_settings.json  trust_config_test_settings.toml  unit_tests.py  v1test_c2pa.py
tests/fixtures/: C-recorded-as-mov.mov  C.dng  ed25519_certs.pem  ed25519_private.key  es256_certs.pem  es256_private.key  es256k_certs.pem  es256k_private.key  es384_certs.pem  es384_private.key  es512_certs.pem  es512_private.key  ps256_certs.pem  ps256_private.key  ps384_certs.pem  ps384_private.key  ps512_certs.pem  ps512_private.key  rs256_certs.pem  rs256_private.key  settings.toml
tests/fixtures/extensionless-files/: readme.md
tests/fixtures/temp_data/: manifest.json  manifest_data-15.c2pa
tests/perf/: README.md  __init__.py  baseline.json  entrypoint.sh  run_profile.py  scenario_names.py  scenarios.py
tests/perf/Dockerfiles/: python-3.10-slim-perf-Dockerfile  python-3.12-slim-perf-Dockerfile  ubuntu-22.04-perf-Dockerfile  ubuntu-24.04-perf-Dockerfile
tests/perf/cpu/: README.md  baseline.json  run_profile.py
tests/perf/memory/: README.md  __init__.py  run_profile.py
tests/perf/reports/: builder_sign_avi-python-3.12-slim-leaks.html  builder_sign_avi-python-3.12-slim-peak.html  builder_sign_avi-python-3.12-slim-temporary.html  builder_sign_gif-python-3.12-slim-leaks.html  builder_sign_gif-python-3.12-slim-peak.html  builder_sign_gif-python-3.12-slim-temporary.html  builder_sign_heic-python-3.12-slim-leaks.html  builder_sign_heic-python-3.12-slim-peak.html  builder_sign_heic-python-3.12-slim-temporary.html  builder_sign_jpeg_archive_roundtrip-python-3.12-slim-leaks.html  builder_sign_jpeg_archive_roundtrip-python-3.12-slim-peak.html  builder_sign_jpeg_archive_roundtrip-python-3.12-slim-temporary.html  builder_sign_jpeg_component_of-python-3.12-slim-leaks.html  builder_sign_jpeg_component_of-python-3.12-slim-peak.html  builder_sign_jpeg_component_of-python-3.12-slim-temporary.html  builder_sign_jpeg_legacy-python-3.12-slim-leaks.html  builder_sign_jpeg_legacy-python-3.12-slim-peak.html  builder_sign_jpeg_legacy-python-3.12-slim-temporary.html  builder_sign_jpeg_parallel_split_barrier-python-3.12-slim-leaks.html  builder_sign_jpeg_parallel_split_barrier-python-3.12-slim-peak.html  builder_sign_jpeg_parallel_split_barrier-python-3.12-slim-temporary.html  builder_sign_jpeg_parallel_split_pool-python-3.12-slim-leaks.html  builder_sign_jpeg_parallel_split_pool-python-3.12-slim-peak.html  builder_sign_jpeg_parallel_split_pool-python-3.12-slim-temporary.html  builder_sign_jpeg_parent_and_component-python-3.12-slim-leaks.html  builder_sign_jpeg_parent_and_component-python-3.12-slim-peak.html  builder_sign_jpeg_parent_and_component-python-3.12-slim-temporary.html  (+57 more)
(+14 files in other folders)
