[package]
name = "c2pa-python"
version = "0.8.3"
edition = "2021"
authors = ["Gavin Peacock <gpeacock@adobe.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib", "cdylib"]

[package.metadata.cargo-udeps.ignore]
normal = ["openssl-src"]

[dependencies]
c2pa = { version = "0.49.3", features = ["file_io", "pdf", "fetch_remote_manifests"]}
thiserror = "1.0.49"
uniffi = "0.28.2"
openssl-src = "=300.3.1" # Required for openssl-sys
log = "0.4.21"

[build-dependencies]
uniffi = { version = "0.28.2", features = ["build"] }
