[package]
name = "c2pa-go"
version = "0.7.0"
edition = "2021"
authors = ["Eli Mallon <eli@stream.place>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "c2pa"
crate-type = ["staticlib", "cdylib"]

[dependencies]
c2pa = { git = "https://git.stream.place/aquareum-tv/c2pa-rs.git", rev = "5ca8c085a05daa36a91fb9edfdee6098cffac69b", features = [
  "unstable_api",
  "openssl",
] }
# c2pa = { path = "../c2pa-rs/sdk", features = ["unstable_api", "openssl"] }
# c2pa = { version = "0.33.3", features = ["unstable_api", "openssl"] }
pem = "3.0.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0.49"
uniffi = "= 0.28.3"

[build-dependencies]
uniffi = { version = "= 0.28.3", features = ["build"] }
