[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "c2pa-python"
version = "0.10.0"
requires-python = ">=3.8"
description = "Python bindings for the C2PA Content Authenticity Initiative (CAI) library"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Gavin Peacock", email = "gvnpeacock@adobe.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows"
]
maintainers = [
  {name = "Gavin Peacock", email = "gpeacock@adobe.com"}
]
urls = {homepage = "https://contentauthenticity.org", repository = "https://github.com/contentauth/c2pa-python"}
dependencies = [
    "wheel>=0.41.2",
    "setuptools>=68.0.0",
    "toml>=0.10.2",
    "pytest>=7.4.0",
    "cryptography>=41.0.0",
    "requests>=2.0.0"
]

[project.optional-dependencies]
test = [
  "pytest < 5.0.0"
]

[project.scripts]
download-artifacts = "c2pa.build:download_artifacts"

[tool.hatch.build.targets.wheel]
packages = ["src/c2pa"]

[tool.hatch.build.hooks.custom]
path = "c2pa/build.py"

