[build-system]
requires = ["setuptools>=68.0.0", "wheel", "toml>=0.10.2"]
build-backend = "setuptools.build_meta"

[project]
name = "c2pa-python"
version = "0.23.1"
requires-python = ">=3.10"
description = "Python bindings for the C2PA Content Authenticity Initiative (CAI) library"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Gavin Peacock", email = "gvnpeacock@adobe.com" }, { name = "Tania Mathern", email = "mathern@adobe.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows"
]
maintainers = [
  {name = "Gavin Peacock", email = "gpeacock@adobe.com"}
]
urls = {homepage = "https://contentauthenticity.org", repository = "https://github.com/contentauth/c2pa-python"}
dependencies = [
    "wheel>=0.41.2",
    "setuptools>=68.0.0",
    "toml>=0.10.2",
    "pytest>=7.4.0",
    "cryptography>=41.0.0",
    "requests>=2.0.0"
]

[project.scripts]
download-artifacts = "c2pa.build:download_artifacts"

# Workaround to prevent setuptools from automatically including invalid metadata
[tool.setuptools]
license-files = []
