[metadata]
name = c2pa
version = 1.0.0
description = Python bindings for the C2PA library
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT OR Apache-2.0

[options]
package_dir =
    = src
packages = find:
include_package_data = True

[options.packages.find]
where = src